# liteapi

./: README.md  index.html  package-lock.json  package.json
docs/: 00-产品设计.md  01-功能设计.md  02-界面设计.md  03-数据模型.md  04-接口设计.md  05-项目规则.md  06-开发计划.md  07-验收标准.md  08-部署方案.md
src/: App.css  App.tsx  tauri-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs
src/components/code-gen/: CodeGenModal.tsx  code-gen.css
src/components/key-value-table/: KeyValueTable.tsx  key-value-table.css
src/features/api/: RequestBasicInfo.tsx  RequestEditor.tsx  RequestSubTabs.tsx  api.css
src/features/api/panels/: AuthPanel.tsx  BodyPanel.tsx  CookiesPanel.tsx  HeadersPanel.tsx  ParamsPanel.tsx
src/features/response/: ResponseBodyPanel.tsx  ResponseViewer.tsx  response.css
src/features/sidebar/: FolderTree.tsx  Sidebar.tsx  SidebarToolbar.tsx  sidebar.css
src/features/tab/: TabBar.tsx
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/services/: codeGenerator.ts  httpClient.ts  urlQuerySync.ts
src/stores/: folderStore.ts  helpers.ts  settingsStore.ts  tabStore.ts
src/types/: api.ts  folder.ts  index.ts  tab.ts
